replaced keycloak by firebase auth
